--- a/index.html
+++ b/index.html
@@ -71,10 +71,11 @@
 
       <!-- Début de la section 3 -->
       <!-- Début de la 1ère carte restaurant -->
-      <section class="restorants-prev">
-        <h1 class="restorants-prev__maintitle">Restaurants</h1>
-        <div class="restorants-prev__card">
-          <a href="#" class="restorants-prev__cardlink">
+      <!-- penser à réviser mon anglais ... -->
+      <section class="resto-prev">
+        <h1 class="resto-prev__maintitle">Restaurants</h1>
+        <div class="resto-prev__card">
+          <a href="#" class="resto-prev__cardlink">
             <p class="card--new">Nouveau</p>
             <img
               src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
@@ -93,8 +94,8 @@
         <!-- Fin de la 1ère carte restaurant -->
 
         <!-- Début de la seconde carte restaurant -->
-        <div class="restorants-prev__card">
-          <a href="#" class="restorants-prev__cardlink">
+        <div class="resto-prev__card">
+          <a href="#" class="resto-prev__cardlink">
             <p class="card--new">Nouveau</p>
             <img
               src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
@@ -112,8 +113,8 @@
         </div>
         <!-- Fin de la seconde carte restaurant -->
         <!-- Début de la troisième carte restaurant -->
-        <div class="restorants-prev__card">
-          <a href="#" class="restorants-prev__cardlink">
+        <div class="resto-prev__card">
+          <a href="#" class="resto-prev__cardlink">
             <img
               src="assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
               alt="Á la française"
@@ -130,8 +131,8 @@
         </div>
         <!-- Fin de la troisième carte restaurants -->
         <!-- Début de la quatrième carte restaurant -->
-        <div class="restorants-prev__card">
-          <a href="#" class="restorants-prev__cardlink">
+        <div class="resto-prev__card">
+          <a href="#" class="resto-prev__cardlink">
             <img
               src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
               alt="Le délice des sens"
