--- a/pages/la_palette_du_gout.html
+++ b/pages/la_palette_du_gout.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../assets/css/style.css" />
-    <title>La note enchantée</title>
+    <title>La palette du goût</title>
   </head>
   <body>
     <header class="page-head">
@@ -28,14 +28,14 @@
     <main>
       <!-- Simple image ou background? -->
       <img
-        src="../assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
-        alt="Photo du restaurant La note enchantée"
+        src="../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+        alt="Photo du restaurant La palette du goût"
         class="picture"
       />
       <section class="menu">
         <div class="menu_maintitle">
           <!-- attention aux balises titres, le h1 est unique -->
-          <h1 class="maintitle_title">La note enchantée</h1>
+          <h1 class="maintitle_title">La palette du goût</h1>
           <p class="maintile_icon"><i class="fa-solid fa-left-long"></i></p>
         </div>
         <!-- Début du menu pour les Entrées -->
@@ -44,20 +44,18 @@
           <!-- les divs dans les divs inutiles -->
 
           <a class="card" href="#">
-            <p class="card_title">Ravioles de foie gras</p>
-            <p class="card_subtitle">Accompagnés de leur crème à la truffe</p>
+            <p class="card_title">Fricassée d'escargot</p>
+            <p class="card_subtitle">Au pimet d'espelette</p>
             <p class="card_price">25€</p>
             <p class="card_checkicon">
               <i class="fa-regular fa-circle-check"></i>
             </p>
           </a>
-
           <!-- Uniformisation des classes selon la méthode BEM -->
           <!-- Suppression de divs inutiles -->
-
           <a class="card" href="#">
-            <p class="card_title">Caviar osciètre</p>
-            <p class="card_subtitle">Sur blini à la farine de blé noir</p>
+            <p class="card_title">Foie gras de canard mi-cuit</p>
+            <p class="card_subtitle">Et ses copeaux de truffe noire</p>
             <p class="card_price">35€</p>
             <p class="card_checkicon">
               <i class="fa-regular fa-circle-check"></i>
@@ -67,19 +65,11 @@
           <!-- attention -->
 
           <a class="card" href="#">
-            <p class="card_title">Homard et espuma de potiron</p>
-            <p class="card_subtitle">Mariné aux zestes d'orange</p>
-            <p class="card_price">20€</p>
-            <p class="card_checkicon">
-              <i class="fa-regular fa-circle-check"></i>
+            <p class="card_title">Oeuf au plat</p>
+            <p class="card_subtitle">
+              Assaisonné à la truffe sur lit de caviar
             </p>
-          </a>
-
-
-          <a class="card" href="#">
-            <p class="card_title">Foie gras de canard cuit entier</p>
-            <p class="card_subtitle">confiture de figue et pain toasté</p>
-            <p class="card_price">35€</p>
+            <p class="card_price">20€</p>
             <p class="card_checkicon">
               <i class="fa-regular fa-circle-check"></i>
             </p>
@@ -91,22 +81,24 @@
           <h2 class="card_maintitle">Plats</h2>
 
           <a class="card" href="#">
-            <p class="card_title">Noix decoquilles Saint-Jacques</p>
-            <p class="card_subtitle">Sur lit de purée de céleri-rave</p>
+            <p class="card_title">Filet de boeuf aux herbes</p>
+            <p class="card_subtitle">Accompagné de sa ribambelle de légumes</p>
             <p class="card_price">40€</p>
           </a>
 
           <a class="card" href="#">
-            <p class="card_title">Langoustine poêlée</p>
-            <p class="card_subtitle">Purée de patate douce</p>
+            <p class="card_title">Parmentier de queue de boeuf</p>
+            <p class="card_subtitle">
+              À la truffe noire sur sa purée de panais
+            </p>
             <p class="card_price">35€</p>
           </a>
 
           <!-- Penser à uniformiser les classes des divs pour le code SCSS -->
 
           <a class="card" href="#">
-            <p class="card_title">Mijoté de queue de boeuf</p>
-            <p class="card_subtitle">Et riz sauvage aux zests de citron</p>
+            <p class="card_title">Filet de turbot</p>
+            <p class="card_subtitle">Aux agrumes</p>
             <p class="card_price">44€</p>
           </a>
         </div>
@@ -116,20 +108,22 @@
           <h2 class="card_maintitle">Desserts</h2>
 
           <a class="card" href="#">
-            <p class="card_title">macaron noisette et chocolat</p>
-            <p class="card_subtitle">Glace au caramel brun et sel de Guérande</p>
+            <p class="card_title">Paris-Brest</p>
+            <p class="card_subtitle">Revisité</p>
             <p class="card_price">18€</p>
           </a>
 
           <a class="card" href="#">
-            <p class="card_title">Baba au rhum revisité</p>
-            <p class="card_subtitle">Avec son coulis de citron</p>
+            <p class="card_title">Macaron au chocolat d'exception</p>
+            <p class="card_subtitle">Et glace à la vanille de Madagascar</p>
             <p class="card_price">22€</p>
           </a>
 
           <a class="card" href="#">
-            <p class="card_title">Tarte au citron meringuée</p>
-            <p class="card_subtitle">Destructurée</p>
+            <p class="card_title">Mousse au chocolat</p>
+            <p class="card_subtitle">
+              Au piment d'espelette et à la truffe noire
+            </p>
             <p class="card_price">23€</p>
           </a>
         </div>
