Le délice des sens
Création de la dernière page restaurant. Modification de l'image et des menus

--- a/pages/le_delice_des_sens.html
+++ b/pages/le_delice_des_sens.html
@@ -35,7 +35,7 @@
       <section class="menu">
         <div class="menu_maintitle">
           <!-- attention aux balises titres, le h1 est unique -->
-          <h1 class="maintitle_title">La note enchantée</h1>
+          <h1 class="maintitle_title">Le délice des sens</h1>
           <p class="maintile_icon"><i class="fa-solid fa-left-long"></i></p>
         </div>
         <!-- Début du menu pour les Entrées -->
@@ -44,8 +44,8 @@
           <!-- les divs dans les divs inutiles -->
 
           <a class="card" href="#">
-            <p class="card_title">Ravioles de foie gras</p>
-            <p class="card_subtitle">Accompagnés de leur crème à la truffe</p>
+            <p class="card_title">Tartare de thon</p>
+            <p class="card_subtitle">Assaisonné au yuzu</p>
             <p class="card_price">25€</p>
             <p class="card_checkicon">
               <i class="fa-regular fa-circle-check"></i>
@@ -56,8 +56,8 @@
           <!-- Suppression de divs inutiles -->
 
           <a class="card" href="#">
-            <p class="card_title">Caviar osciètre</p>
-            <p class="card_subtitle">Sur blini à la farine de blé noir</p>
+            <p class="card_title">Bouchée de homard croustillant</p>
+            <p class="card_subtitle">Et sa farandole de petits légumes</p>
             <p class="card_price">35€</p>
             <p class="card_checkicon">
               <i class="fa-regular fa-circle-check"></i>
@@ -67,18 +67,9 @@
           <!-- attention -->
 
           <a class="card" href="#">
-            <p class="card_title">Homard et espuma de potiron</p>
-            <p class="card_subtitle">Mariné aux zestes d'orange</p>
+            <p class="card_title">Velouté de cèpes</p>
+            <p class="card_subtitle">Aux truffes</p>
             <p class="card_price">20€</p>
-            <p class="card_checkicon">
-              <i class="fa-regular fa-circle-check"></i>
-            </p>
-          </a>
-
-          <a class="card" href="#">
-            <p class="card_title">Foie gras de canard cuit entier</p>
-            <p class="card_subtitle">confiture de figue et pain toasté</p>
-            <p class="card_price">35€</p>
             <p class="card_checkicon">
               <i class="fa-regular fa-circle-check"></i>
             </p>
@@ -90,22 +81,22 @@
           <h2 class="card_maintitle">Plats</h2>
 
           <a class="card" href="#">
-            <p class="card_title">Noix decoquilles Saint-Jacques</p>
-            <p class="card_subtitle">Sur lit de purée de céleri-rave</p>
+            <p class="card_title">Poulet rôti aux herbes de provence</p>
+            <p class="card_subtitle">Et sa crème de truffe</p>
             <p class="card_price">40€</p>
           </a>
 
           <a class="card" href="#">
-            <p class="card_title">Langoustine poêlée</p>
-            <p class="card_subtitle">Purée de patate douce</p>
+            <p class="card_title">Langouste rôtie</p>
+            <p class="card_subtitle">Et ses légumes de saison</p>
             <p class="card_price">35€</p>
           </a>
 
           <!-- Penser à uniformiser les classes des divs pour le code SCSS -->
 
           <a class="card" href="#">
-            <p class="card_title">Mijoté de queue de boeuf</p>
-            <p class="card_subtitle">Et riz sauvage aux zests de citron</p>
+            <p class="card_title">Côte de boeuf angus</p>
+            <p class="card_subtitle">Et sa purée de panais</p>
             <p class="card_price">44€</p>
           </a>
         </div>
@@ -115,22 +106,22 @@
           <h2 class="card_maintitle">Desserts</h2>
 
           <a class="card" href="#">
-            <p class="card_title">macaron noisette et chocolat</p>
+            <p class="card_title">Farandole de desserts</p>
             <p class="card_subtitle">
-              Glace au caramel brun et sel de Guérande
+              Du chef
             </p>
             <p class="card_price">18€</p>
           </a>
 
           <a class="card" href="#">
-            <p class="card_title">Baba au rhum revisité</p>
-            <p class="card_subtitle">Avec son coulis de citron</p>
+            <p class="card_title">Crème brulée</p>
+            <p class="card_subtitle">Revisitée</p>
             <p class="card_price">22€</p>
           </a>
 
           <a class="card" href="#">
-            <p class="card_title">Tarte au citron meringuée</p>
-            <p class="card_subtitle">Destructurée</p>
+            <p class="card_title">Tiramisu</p>
+            <p class="card_subtitle">A la noisette</p>
             <p class="card_price">23€</p>
           </a>
         </div>
