Liens vers les pages restaurant
Modification de l'adresse des liens vers les pages restaurant correspondantes

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <section class="resto-prev">
         <h1 class="resto-prev__maintitle">Restaurants</h1>
         <div class="resto-prev__card">
-          <a href="#" class="resto-prev__cardlink">
+          <a href="pages/la_palette_du_gout.html" class="resto-prev__cardlink">
             <p class="card--new">Nouveau</p>
             <img
               src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
@@ -95,7 +95,7 @@
 
         <!-- Début de la seconde carte restaurant -->
         <div class="resto-prev__card">
-          <a href="#" class="resto-prev__cardlink">
+          <a href="pages/la_note_enchantee.html" class="resto-prev__cardlink">
             <p class="card--new">Nouveau</p>
             <img
               src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
@@ -114,7 +114,7 @@
         <!-- Fin de la seconde carte restaurant -->
         <!-- Début de la troisième carte restaurant -->
         <div class="resto-prev__card">
-          <a href="#" class="resto-prev__cardlink">
+          <a href="pages/a_la_francaise.html" class="resto-prev__cardlink">
             <img
               src="assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
               alt="Á la française"
@@ -132,7 +132,7 @@
         <!-- Fin de la troisième carte restaurants -->
         <!-- Début de la quatrième carte restaurant -->
         <div class="resto-prev__card">
-          <a href="#" class="resto-prev__cardlink">
+          <a href="pages/le_delice_des_sens.html" class="resto-prev__cardlink">
             <img
               src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
               alt="Le délice des sens"
