Ajout de l'accent sur le à

--- a/pages/le_delice_des_sens.html
+++ b/pages/le_delice_des_sens.html
@@ -121,7 +121,7 @@
 
           <a class="card" href="#">
             <p class="card_title">Tiramisu</p>
-            <p class="card_subtitle">A la noisette</p>
+            <p class="card_subtitle">Á la noisette</p>
             <p class="card_price">23€</p>
           </a>
         </div>
