Début de la configuration de la section 3. Ajustements divers (couleurs, bordures) sur la section 2

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <!-- Début de la section 3 -->
       <!-- Début de la 1ère carte restaurant -->
       <!-- penser à réviser mon anglais ... -->
-      <section class="resto-prev">
+      <section class="section3">
         <h1 class="resto-prev__maintitle">Restaurants</h1>
         <div class="resto-prev__card">
           <a href="pages/la_palette_du_gout.html" class="resto-prev__cardlink">
