--- a/index.html
+++ b/index.html
@@ -47,28 +47,28 @@
       <section class="section2">
         <h2 class="section2__maintitle">Fonctionnement</h2>
         <!-- Premier lien -->
-        <div class="section2__card">
+        <a href="#" class="section2__card">
           <p class="section2__number"><i class="fa-solid fa-1"></i></p>
           <p class="section2__icon">
             <i class="fa-solid fa-mobile-button"></i>
           </p>
           <p class="section2__text">Choisissez un restaurant</p>
-        </div>
+        </a>
         <!-- fin du premier lien -->
 
         <!-- Second lien -->
-        <div class="section2__card">
+        <a href="#" class="section2__card">
           <p class="section2__number"><i class="fa-solid fa-2"></i></p>
           <p class="section2__icon"><i class="fa-solid fa-list"></i></p>
           <p class="section2__text">Composez votre menu</p>
-        </div>
+        </a>
         <!-- Fin du second lien -->
         <!-- Troisième lien -->
-        <div class="section2__card">
+        <a href="#" class="section2__card">
           <p class="section2__number"><i class="fa-solid fa-3"></i></p>
           <p class="section2__icon"><i class="fa-solid fa-store"></i></p>
           <p class="section2__text">Dégustez au restaurant</p>
-        </div>
+        </a>
         <!-- Fin du troisième lien -->
         <!-- Correction des erreurs de fusion et uniformisation des balises -->
       </section>
