Début de la configuration des pages restaurant
Rectification du code HTML de la page à la française. Configuration du header. Ajustement de l'image compliqué.

--- a/pages/a_la_francaise.html
+++ b/pages/a_la_francaise.html
@@ -36,7 +36,7 @@
         <div class="menu_maintitle">
           <!-- attention aux balises titres, le h1 est unique -->
           <h1 class="maintitle_title">Á la française</h1>
-          <p class="maintile_icon"><i class="fa-solid fa-left-long"></i></p>
+          <p class="maintile_icon"> <i class="fa-regular fa-heart"></i></p>
         </div>
         <!-- Début du menu pour les Entrées -->
         <div class="menu-card">
@@ -149,5 +149,9 @@
         <a href="mailto:ohmyfood@gmail.com" class="link__text">Contact</a>
       </div>
     </footer>
+    <script
+    src="https://kit.fontawesome.com/4fd6ec5615.js"
+    crossorigin="anonymous"
+  ></script>
   </body>
 </html>
