--- a/pages/a_la_francaise.html
+++ b/pages/a_la_francaise.html
@@ -36,7 +36,7 @@
         <div class="menu_maintitle">
           <!-- attention aux balises titres, le h1 est unique -->
           <h1 class="maintitle_title">Á la française</h1>
-          <p class="maintile_icon"> <i class="fa-regular fa-heart"></i></p>
+          <p class="maintitle_icon"> <i class="fa-regular fa-heart"></i></p>
         </div>
         <!-- Début du menu pour les Entrées -->
         <div class="menu-card">
