Résolution du problème de synchronisation (oubli du tiret bas pour les fichiers scss) configuration de la page restaurant. Ajustement des cartes et du texte

--- a/pages/a_la_francaise.html
+++ b/pages/a_la_francaise.html
@@ -36,7 +36,7 @@
         <div class="menu_maintitle">
           <!-- attention aux balises titres, le h1 est unique -->
           <h1 class="maintitle_title">Á la française</h1>
-          <p class="maintitle_icon"> <i class="fa-regular fa-heart"></i></p>
+          <p class="maintitle_icon"><i class="fa-regular fa-heart"></i></p>
         </div>
         <!-- Début du menu pour les Entrées -->
         <div class="menu-card">
@@ -77,19 +77,25 @@
         </div>
         <!-- Fin du menu pour les Entrées -->
         <!-- Début du menu pour les plats -->
-        <div class="menu_card">
+        <div class="menu-card">
           <h2 class="card_maintitle">Plats</h2>
 
           <a class="card" href="#">
             <p class="card_title">Coquilles Saint-Jacques</p>
             <p class="card_subtitle">Accompagnées d'une purée de panais</p>
             <p class="card_price">40€</p>
+            <p class="card_checkicon">
+              <i class="fa-regular fa-circle-check"></i>
+            </p>
           </a>
 
           <a class="card" href="#">
             <p class="card_title">Magret de canard</p>
             <p class="card_subtitle">Et parmentier de pommes de terres</p>
             <p class="card_price">35€</p>
+            <p class="card_checkicon">
+              <i class="fa-regular fa-circle-check"></i>
+            </p>
           </a>
 
           <!-- Penser à uniformiser les classes des divs pour le code SCSS -->
@@ -98,6 +104,9 @@
             <p class="card_title">Pigeonneau d'Ille-et-Vilaine</p>
             <p class="card_subtitle">Sur son lit de gnocchis aux légumes</p>
             <p class="card_price">44€</p>
+            <p class="card_checkicon">
+              <i class="fa-regular fa-circle-check"></i>
+            </p>
           </a>
         </div>
         <!-- Fin du menu pour les plats -->
@@ -109,18 +118,27 @@
             <p class="card_title">Pétales de violettes glacés</p>
             <p class="card_subtitle">Et purée de noisettes</p>
             <p class="card_price">18€</p>
+            <p class="card_checkicon">
+              <i class="fa-regular fa-circle-check"></i>
+            </p>
           </a>
 
           <a class="card" href="#">
             <p class="card_title">Fondant au chocolat</p>
             <p class="card_subtitle">Revisité</p>
             <p class="card_price">22€</p>
+            <p class="card_checkicon">
+              <i class="fa-regular fa-circle-check"></i>
+            </p>
           </a>
 
           <a class="card" href="#">
             <p class="card_title">Millefeuille croustillant</p>
             <p class="card_subtitle">Myrtilles et pâte d'amande</p>
             <p class="card_price">23€</p>
+            <p class="card_checkicon">
+              <i class="fa-regular fa-circle-check"></i>
+            </p>
           </a>
         </div>
       </section>
@@ -150,8 +168,8 @@
       </div>
     </footer>
     <script
-    src="https://kit.fontawesome.com/4fd6ec5615.js"
-    crossorigin="anonymous"
-  ></script>
+      src="https://kit.fontawesome.com/4fd6ec5615.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
