Cartes menu restaurant
Ajout d'une bordure verte au fichier HTML (penser à modifier les autres fichiers).  Configuration des marges et longueur de la bordure.

--- a/pages/a_la_francaise.html
+++ b/pages/a_la_francaise.html
@@ -41,11 +41,12 @@
         <!-- Début du menu pour les Entrées -->
         <div class="menu-card">
           <h2 class="card_maintitle">Entrées</h2>
+          <div class="maintitle_border"></div>
           <!-- les divs dans les divs inutiles -->
 
           <a class="card" href="#">
             <p class="card_title">Tartare de poulpe acidulé</p>
-            <p class="card_subtitle">Aux zestes d'orange</p>
+            <p class="card_subtitle">Aux zests d'orange</p>
             <p class="card_price">25€</p>
             <p class="card_checkicon">
               <i class="fa-regular fa-circle-check"></i>
@@ -79,7 +80,7 @@
         <!-- Début du menu pour les plats -->
         <div class="menu-card">
           <h2 class="card_maintitle">Plats</h2>
-
+          <div class="maintitle_border"></div>
           <a class="card" href="#">
             <p class="card_title">Coquilles Saint-Jacques</p>
             <p class="card_subtitle">Accompagnées d'une purée de panais</p>
@@ -113,7 +114,7 @@
         <!-- Début du menu pour les desserts -->
         <div class="menu-card">
           <h2 class="card_maintitle">Desserts</h2>
-
+          <div class="maintitle_border"></div>
           <a class="card" href="#">
             <p class="card_title">Pétales de violettes glacés</p>
             <p class="card_subtitle">Et purée de noisettes</p>
