--- a/pages/a_la_francaise.html
+++ b/pages/a_la_francaise.html
@@ -142,10 +142,11 @@
             </p>
           </a>
         </div>
+        <div class="order">
+          <button class="order_button">Commander</button>
+        </div>
       </section>
-      <section class="order">
-        <button class="order_button">Commander</button>
-      </section>
+
     </main>
     <footer class="index-foot">
       <img
