--- a/pages/le_delice_des_sens.html
+++ b/pages/le_delice_des_sens.html
@@ -36,7 +36,7 @@
         <div class="menu_maintitle">
           <!-- attention aux balises titres, le h1 est unique -->
           <h1 class="maintitle_title">Le délice des sens</h1>
-          <p class="maintile_icon"><i class="fa-solid fa-left-long"></i></p>
+          <p class="maintitle_icon"><i class="fa-regular fa-heart"></i></p>
         </div>
         <!-- Début du menu pour les Entrées -->
         <div class="menu-card">
@@ -77,7 +77,7 @@
         </div>
         <!-- Fin du menu pour les Entrées -->
         <!-- Début du menu pour les plats -->
-        <div class="menu_card">
+        <div class="menu-card">
           <h2 class="card_maintitle">Plats</h2>
 
           <a class="card" href="#">
@@ -151,5 +151,9 @@
         <a href="mailto:ohmyfood@gmail.com" class="link__text">Contact</a>
       </div>
     </footer>
+    <script
+    src="https://kit.fontawesome.com/4fd6ec5615.js"
+    crossorigin="anonymous"
+  ></script>
   </body>
 </html>
