Correction d'une partie de mon code par mon mentor. Code complètement WET. Se concentrer davantage sur un code DRY

--- a/pages/a_la_francaise.html
+++ b/pages/a_la_francaise.html
@@ -25,7 +25,7 @@
         />
       </nav>
     </header>
-    <main>
+    <main id="page-restau">
       <!-- Simple image ou background? -->
       <img
         src="../assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
